# analolzer

./: .gitignore  Cargo.toml  go.mod
mdr/: .gitignore  Cargo.toml  README.md  go.mod  main.go
mdr/rofl/: metadata.go  mod.go
mdr/scripts/: extract_metadata_schema.py  find_metadata_off.py  generate_stats_struct.py  run_all.py  run_all_full.sh
mdr/src/: main.rs  rofl.rs
mdr/src/rofl/: crypto.rs  error.rs  file.rs  mod.rs  types.rs
