[package]
name = "mdr-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust crate to interact with rofl (replay of league of legends) files."
authors = ["ZiedYousfi <zied.essaber@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
anyhow = "1.0.100"
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
